# TimeTrackSystem

./: .gitignore  README.md  manage.py  pyproject.toml
DjangoTimeLog/: asgi.py  settings.py  urls.py  wsgi.py
timecontrol/: apps.py  models.py
users/: admin.py  models.py
