[tool.poetry]
name = "djangotimelog"
version = "0.1.0"
description = ""
authors = ["dt50 <alexfretka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
black = "^23.1.0"
aiohttp = "^3.8.4"
isort = "^5.12.0"
petrovich = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
